mise en place basique d'un cms basique cloudinary marche aussi

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.14.3",
+    "@cloudinary/url-gen": "^1.22.0",
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
     "firebase": "^12.4.0",
